--- a/zyanwashere.css
+++ b/zyanwashere.css
@@ -1,51 +1,108 @@
-/* FONT: ROBOTO */
-/* ============================================== */
 
-@font-face {
-  font-family: 'Roboto';
-  src: url('Roboto-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Roboto';
-  src: url('Roboto-Bold.ttf') format('truetype');
-  font-weight: bold;
-  font-style: normal;
-}
+* {
+/* VARIABLES    ======================================== */
+/* ===================================================== */
+  --test: #FF0000;
 
+  --header: #CCBBAA;
+  --text1: #AA9988;
 
-/* TEXT COLORS */
-/* ============================================== */
+  --background1: #222222;
+  --background2: #2d2d2d;
+  --background3: #333333;
+  --background4: #555555;
 
-h1 {
-  font-family: 'Roboto', sans-serif;
-  font-weight: bold;
-  color: #FFEECC
-}
+  --accent1: #bb6633;
+  --accent2: #eeaa22;
+  --accent3: #ffcc44;
 
-h2 {
-  font-family: 'Roboto', sans-serif;
-  font-weight: bold;
-  color: #CCBBAA
-}
+  --h1-size: 1.50em;
+  --h2-size: 1.25em;
+  --h3-size: 1.10em;
 
-a {
-  color: #ffcc44
-}
-
-*{
-  font-family: 'Roboto', sans-serif;
+/* FONT OPTIONS ======================================== */
+/* ===================================================== */
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
   line-height: 1.5;
-  color: #AA9988
+  color: var(--text1);
+}
+
+/* HEADER  ============================================ */
+/* ==================================================== */
+h1, h2 {
+  color: var(--header);
+  font-weight: bold;
+  line-height: var(--h1-size);
+}
+
+/* CODE & QUOTES ======================================= */
+/* ===================================================== */
+code, blockquote {
+  background-color: var(--background1);
+  color: var(--text1);
+  padding: 1em;
+  border left: 5px solid #555;
+  max-width: 100%;
+  white-space: pre-wrap;
+  display: block;
+  padding: 10px;
+}
+
+/* HYPERLINKS   ======================================== */
+/* ===================================================== */
+a {
+  color: var(--accent2);
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--accent3);
+  text-decoration: underline;
+}
+
+summary {
+  color: var(--accent3);
+  background-color: var(--background1);
 }
 
 
-/* NAVBAR OPTIONS */
-/* ============================================== */
 
+
+/* FORMATTING   ======================================== */
+/* ===================================================== */
+body {
+  background-color: var(--background2);
+  padding: 50px;
+  margin: auto;
+  max-width: 800px;
+}
+
+.center {
+  width: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.thumbnail {
+  width: 800px;
+  max-width: 100%;
+}
+
+.social {
+  width: 50px;
+  height: 50px;
+}
+
+
+
+
+/* NAVBAR       ======================================== */
+/* ===================================================== */
 .navbar {
-    background-color: #1d1d1d;
+    background-color: var(--background1);
     overflow: hidden;
 }
 
@@ -55,17 +112,13 @@ a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    color: #bb6633
+    color: var(--accent1);
 }
 
 .navbar a:hover {
-    background-color: #151515;
+    background-color: var(--background3);
     color: #ffcc44;
 }
-
-
-/* HEADER OPTIONS */
-/* ============================================== */
 
 .header {
       padding: 10px;
@@ -75,36 +128,4 @@ a {
 .logo {
   width: 125px;
   height: 125px;
-}
-
-
-/* BODY + THUMBNAIL + SOCIAL DOODLES + FOOTER */
-/* ============================================== */
-
-body {
-  background-color: #2d2d2d;
-  padding: 50px;
-  margin: auto;
-  max-width: 800px;
-}
-
-
-.center {
-  width: 50%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-}
-
-
-.thumbnail {
-  width: 800px;
-}
-
-.social {
-  width: 50px;
-  height: 50px;
 }
