--- a/converted/zyanwashere.css
+++ b/converted/zyanwashere.css
@@ -22,7 +22,7 @@
 
 /* FONT OPTIONS ======================================== */
 /* ===================================================== */
-  font-family: "Comic Sans MS", "Comic Sans";
+  /* font-family: "Comic Sans MS", "Comic Sans"; */
   line-height: 1.5;
   color: var(--text1);
 }
