--- a/converted/zyanwashere.css
+++ b/converted/zyanwashere.css
@@ -22,6 +22,7 @@
 
 /* FONT OPTIONS ======================================== */
 /* ===================================================== */
+  font-family: 'Arial', sans-serif;
   line-height: 1.5;
   color: var(--text1);
 }
