update navbar & comic sans font

--- a/converted/zyanwashere.css
+++ b/converted/zyanwashere.css
@@ -1,7 +1,7 @@
 
 /* HEADERS & TEXT */
 * {
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family: "Comic Sans MS", "Comic Sans";
   line-height: 1.5;
   color: #AA9988;
 }
