--- a/converted/zyanwashere.css
+++ b/converted/zyanwashere.css
@@ -1,7 +1,8 @@
 
 /* HEADERS & TEXT */
 * {
-  font-family: "Comic Sans MS", "Comic Sans";
+  /* comic sans doesn 't WORK man... why :( */
+  /* font-family: "Comic Sans MS", "Comic Sans"; */
   line-height: 1.5;
   color: #AA9988;
 }
