update font changed to open sans?

--- a/converted/zyanwashere.css
+++ b/converted/zyanwashere.css
@@ -3,6 +3,7 @@
 * {
   /* comic sans doesn 't WORK man... why :( */
   /* font-family: "Comic Sans MS", "Comic Sans"; */
+  font-family: 'Open Sans', sans-serif;
   line-height: 1.5;
   color: #AA9988;
 }
