--- a/zyanwashere.css
+++ b/zyanwashere.css
@@ -20,14 +20,14 @@
 
 
 
-@media (max-width: 700px)
+@media (max-width: 1000px)
 {
   html
   {
     display: block;
     background-color: blue;
   }
-  
+
   p
   {
     font-size: 1.25em
@@ -38,12 +38,18 @@
 
 
 
-@media (min-width: 700px)
+@media (min-width: 1000px)
 {
   html
   {
     display: block;
     background-color: red;
   }
+
+  p
+  {
+    font-size: 1.25em
+  }
+
 
 }
